@@ -1,3 +1,7 @@
+Thu Sep  6 13:28:51 2001  WATANABE Hirofumi  <eban@ruby-lang.org>
+
+	* lib/jcode.rb (_regexp_quote): fix quote handling, again.
+
 Thu Sep  6 12:02:49 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>
 
 	* file.c (rb_find_file_ext): add const qualifiers to ext.
